Bug 320072 - KMail crash: pressing enter in emtied header input field
Summary: KMail crash: pressing enter in emtied header input field
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.2
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-21 00:00 UTC by Frank Steinmetzger
Modified: 2013-05-29 08:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2013-05-21 00:00:10 UTC
Application: kmail (4.10.2)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.9.1 x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
What I was doing when the application crashed:

I was replying to an E-Mail with an account that automatically sets a BCC. For this particular mail I didn't need the BCC, so I went into the field, deleted the content and then pressed Enter (actually I wanted to press Ctrl+Enter to send, but forgot the Ctrl as it is quite late). In that moment, KMail crashed.

Just to be sure it wasn't some weird fluke, I repeated the steps and the crash happened again.

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6776fea780 (LWP 20514))]

Thread 3 (Thread 0x7f67577b8700 (LWP 20532)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f67678ce094 in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x00007f67720cbd96 in start_thread (arg=0x7f67577b8700) at pthread_create.c:305
#3  0x00007f67742e246d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f6756ea7700 (LWP 20533)):
#0  0x00007f67742d4a6d in read () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f676c3e14a0 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f676c3a4234 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f676c3a467c in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f676c3a47f4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007f6774c69f86 in QEventDispatcherGlib::processEvents (this=0x7f67480008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f6774c3a1e2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f6774c3a437 in QEventLoop::exec (this=0x7f6756ea6de0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f6774b39f87 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#9  0x00007f6774b3cffc in QThreadPrivate::start (arg=0x28e43a0) at thread/qthread_unix.cpp:338
#10 0x00007f67720cbd96 in start_thread (arg=0x7f6756ea7700) at pthread_create.c:305
#11 0x00007f67742e246d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f6776fea780 (LWP 20514)):
[KCrash Handler]
#6  0x00007f6774c418f7 in QMetaObject::cast (this=0x7f67702b8060, obj=0x25502c9) at kernel/qmetaobject.cpp:274
#7  0x00007f67700392da in MessageComposer::RecipientsEditor::slotLineDeleted(int) () from /usr/lib64/libmessagecomposer.so.4
#8  0x00007f6774c4f221 in QMetaObject::activate (sender=0x250e2e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff016325d0) at kernel/qobject.cpp:3539
#9  0x00007f676df3ea41 in KPIM::MultiplyingLineEditor::lineDeleted(int) () from /usr/lib64/libkdepim.so.4
#10 0x00007f6774c4f221 in QMetaObject::activate (sender=0x231e840, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff01632720) at kernel/qobject.cpp:3539
#11 0x00007f676df3f301 in ?? () from /usr/lib64/libkdepim.so.4
#12 0x00007f676df3f771 in ?? () from /usr/lib64/libkdepim.so.4
#13 0x00007f676df3f812 in ?? () from /usr/lib64/libkdepim.so.4
#14 0x00007f6774c4f221 in QMetaObject::activate (sender=0x2ca4f00, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff016328f0) at kernel/qobject.cpp:3539
#15 0x00007f676df3e292 in KPIM::MultiplyingLine::deleteLine(KPIM::MultiplyingLine*) () from /usr/lib64/libkdepim.so.4
#16 0x00007f6770036856 in ?? () from /usr/lib64/libmessagecomposer.so.4
#17 0x00007f6774c4f221 in QMetaObject::activate (sender=0x2ca6050, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3539
#18 0x00007f677558de8d in QLineEdit::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qlineedit.cpp:144
#19 0x00007f6774c4f221 in QMetaObject::activate (sender=0x2ca6490, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3539
#20 0x00007f6775594c84 in QLineControl::processKeyEvent (this=0x2ca6490, event=0x7fff01633a00) at widgets/qlinecontrol.cpp:1629
#21 0x00007f6775589c79 in QLineEdit::keyPressEvent (this=0x2ca6050, event=0x7fff01633a00) at widgets/qlineedit.cpp:1707
#22 0x00007f6776ac6f58 in KLineEdit::keyPressEvent (this=0x2ca6050, e=0x7fff01633a00) at /var/tmp/portage/kde-base/kdelibs-4.10.2-r1/work/kdelibs-4.10.2/kdeui/widgets/klineedit.cpp:964
#23 0x00007f676df12af4 in KPIM::AddresseeLineEdit::keyPressEvent(QKeyEvent*) () from /usr/lib64/libkdepim.so.4
#24 0x00007f677003707a in ?? () from /usr/lib64/libmessagecomposer.so.4
#25 0x00007f67751c5938 in QWidget::event (this=0x2ca6050, event=0x7fff01633a00) at kernel/qwidget.cpp:8421
#26 0x00007f677558c217 in QLineEdit::event (this=0x2ca6050, e=0x7fff01633a00) at widgets/qlineedit.cpp:1524
#27 0x00007f6776ac564b in KLineEdit::event (this=0x2ca6050, ev=0x7fff01633a00) at /var/tmp/portage/kde-base/kdelibs-4.10.2-r1/work/kdelibs-4.10.2/kdeui/widgets/klineedit.cpp:1397
#28 0x00007f6775173704 in notify_helper (e=0x7fff01633a00, receiver=0x2ca6050, this=0x1ea03c0) at kernel/qapplication.cpp:4562
#29 QApplicationPrivate::notify_helper (this=0x1ea03c0, receiver=0x2ca6050, e=0x7fff01633a00) at kernel/qapplication.cpp:4534
#30 0x00007f677517952e in QApplication::notify (this=<optimized out>, receiver=<optimized out>, e=0x7fff01633a00) at kernel/qapplication.cpp:4003
#31 0x00007f6776a0cdd6 in KApplication::notify (this=0x7fff016349b0, receiver=0x2ca6050, event=0x7fff01633a00) at /var/tmp/portage/kde-base/kdelibs-4.10.2-r1/work/kdelibs-4.10.2/kdeui/kernel/kapplication.cpp:311
#32 0x00007f6774c3b69c in QCoreApplication::notifyInternal (this=0x7fff016349b0, receiver=0x2ca6050, event=0x7fff01633a00) at kernel/qcoreapplication.cpp:946
#33 0x00007f67752110b9 in QKeyMapper::sendKeyEvent (keyWidget=0x2ca6050, grab=<optimized out>, type=QEvent::KeyPress, code=16777220, modifiers=..., text=..., autorepeat=false, count=1, nativeScanCode=36, nativeVirtualKey=65293, nativeModifiers=0) at kernel/qkeymapper_x11.cpp:1866
#34 0x00007f67752114fb in QKeyMapperPrivate::translateKeyEvent (this=0x1ef6500, keyWidget=0x2ca6050, event=0x7fff016344c0, grab=false) at kernel/qkeymapper_x11.cpp:1836
#35 0x00007f67751ed9b4 in QApplication::x11ProcessEvent (this=0x7fff016349b0, event=0x7fff016344c0) at kernel/qapplication_x11.cpp:3532
#36 0x00007f6775215452 in x11EventSourceDispatch (s=0x1ea2a70, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#37 0x00007f676c3a43f2 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#38 0x00007f676c3a4738 in ?? () from /usr/lib64/libglib-2.0.so.0
#39 0x00007f676c3a47f4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#40 0x00007f6774c69f86 in QEventDispatcherGlib::processEvents (this=0x1e94d70, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#41 0x00007f67752150ee in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#42 0x00007f6774c3a1e2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#43 0x00007f6774c3a437 in QEventLoop::exec (this=0x7fff01634870, flags=...) at kernel/qeventloop.cpp:204
#44 0x00007f6774c3f175 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#45 0x00000000004030a7 in ?? ()
#46 0x00007f67742194bd in __libc_start_main (main=0x402630, argc=3, ubp_av=0x7fff01634e28, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff01634e18) at libc-start.c:226
#47 0x0000000000403585 in _start ()

Reported using DrKonqi
Comment 1 Laurent Montel 2013-05-29 08:02:13 UTC
I confirm it.
Comment 2 Laurent Montel 2013-05-29 08:09:24 UTC
Git commit 2f8466d8d1413ac8320e434958dcf4684942aff6 by Montel Laurent.
Committed on 29/05/2013 at 10:08.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 320072 - KMail crash: pressing enter in emtied header input field

(it tried to remove line -1 => crash)

FIXED-IN: 4.10.4

M  +2    -1    libkdepim/multiplyinglineview_p.cpp

http://commits.kde.org/kdepim/2f8466d8d1413ac8320e434958dcf4684942aff6