Fix Bug 320072 - KMail crash: pressing enter in emtied header input field

(it tried to remove line -1 => crash)

FIXED-IN: 4.10.4
BUG: 320072